Fix vw/vh not taking into account scrollbars.

--- a/P1/css/global.css
+++ b/P1/css/global.css
@@ -109,3 +109,11 @@ input, button, select {
 .dropdown .list-group-item > div {
     gap: 20px;
 }
+
+.min-w-100 {
+    min-width: 100%;
+}
+
+.min-h-100 {
+    min-height: 100%;
+}
